welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: ';' expected but '<-' found.
      T(j)<-m
          ^